# Happy-Vibe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ERRORS_SUMMARY.md  README.md  RELEASE_NOTES.md
monitor/: README.md  generate_icons.py  pyproject.toml
monitor/src/: __init__.py  main.py
monitor/src/api/: __init__.py  client.py
monitor/src/autostart/: __init__.py  manager.py
monitor/src/config/: __init__.py  settings.py
monitor/src/notify/: __init__.py  notifier.py
monitor/src/tray/: __init__.py  tray_icon.py
monitor/src/watcher/: __init__.py  log_watcher.py
monitor/tests/: conftest.py  test_autostart.py  test_client.py  test_log_watcher.py  test_notifier.py  test_settings.py  test_tray.py
vibehub/: README.md  api_test_results_20260214_043824.json  pyproject.toml  requirements.txt  test_api_endpoints.py
vibehub/data/: vibehub.db
vibehub/src/: __init__.py  main.py
vibehub/src/adapters/: __init__.py  base.py  claude_code.py
vibehub/src/api/: __init__.py  achievement.py  activity.py  auction.py  check_in.py  economy.py  energy.py  event.py  farm.py  friend.py  friends.py  guild.py  guild_war.py  guilds.py  health.py  leaderboard.py  leaderboards.py  market.py  player.py  pvp.py  quest.py  schemas.py  season.py  shop.py  websocket.py
vibehub/src/config/: settings.py
vibehub/src/core/: __init__.py  achievement_data.py  achievement_manager.py  auction.py  check_in.py  economy.py  energy_calculator.py  event.py  flow_detector.py  guild_manager.py  guild_war_manager.py  leaderboard_manager.py  market.py  models.py  pricing.py  pvp_manager.py  quest.py  season_manager.py  shop.py
vibehub/src/multiplayer/: __init__.py  connection_manager.py  models.py
vibehub/tests/: conftest.py  test_achievement_api.py  test_achievement_manager.py  test_activity_api.py  test_auction.py  test_check_in.py  test_check_in_api.py  test_claude_code_adapter.py  test_database_models.py  test_economy.py  test_energy_api.py  test_energy_calculator.py  test_event_api.py  test_event_manager.py  test_farm_api.py  test_flow_detector.py  test_friend_api.py  test_guild_manager.py  test_guild_war_manager.py  test_health_api.py  test_leaderboard_api.py  test_leaderboard_manager.py  test_market.py  test_multiplayer.py  test_player_api.py  test_pricing.py  test_pvp_api.py  test_pvp_manager.py  test_quest.py  test_quest_api.py  test_quest_manager.py  test_season_manager.py  test_shop.py
(+116 files in other folders)
